--- a/auth/login/login.html
+++ b/auth/login/login.html
@@ -55,9 +55,9 @@
               
             </form>
 
-            <div class="register">
+            <!-- <div class="register">
                 <p>Don't have an account?<a href="/auth/registeration/register.html">Register here</a></p>
-            </div>
+            </div> -->
           </div>
         </div>
     </div>
