--- a/dashboard/admin.html
+++ b/dashboard/admin.html
@@ -7,7 +7,25 @@
     <title>Professional Dashboard</title>
     <link rel="stylesheet" href="/assests/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-5e2ESR8Ycmos6g3gAKr1Jvwye8sW4U1u/cAKulfVJnkakCcMqhOudbtPnvJ+nbv7" crossorigin="anonymous">
-</head>
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+    const loggedInUser = JSON.parse(localStorage.getItem('loggedInUser'));
+
+    // If no user is logged in, redirect to login page
+    if (!loggedInUser) {
+        alert('You need to log in to access this page.');
+        window.location.href = '/auth/login/login.html'; // Redirect to login
+    } else {
+        // Display logged-in user's name and role in the dashboard
+        const userProfile = document.querySelector('.user-profile span');
+        if (userProfile) {
+            userProfile.textContent = `Welcome, ${loggedInUser.firstName}`;
+        }
+    }
+});
+
+    </script>
+  </head>
 <body>
 
     <div id="sidebar-container"></div> <!-- Container for the sidebar -->
@@ -38,20 +56,6 @@
           <p>50</p>
         </div>
       </section>
-
-      <!-- Charts Section -->
-      <!-- <section class="charts">
-        <div class="chart">
-          <h4>Revenue Growth</h4>
-          <canvas id="revenueChart"></canvas>
-        </div>
-        <div class="chart">
-          <h4>User Engagement</h4>
-          <canvas id="userChart"></canvas>
-        </div>
-      </section>
-    </div>
-  </div> -->
 
 
   <script>
