"Updated registration script to store user data in localStorage, added dashboard data update functionality, and refactored dashboard scripts to handle user role-based updates."

--- a/dashboard/admin.html
+++ b/dashboard/admin.html
@@ -13,7 +13,7 @@
 
     // If no user is logged in, redirect to login page
     if (!loggedInUser) {
-        alert('You need to log in to access this page.');
+        // alert('You need to log in to access this page.');
         window.location.href = '/auth/login/login.html'; // Redirect to login
     } else {
         // Display logged-in user's name and role in the dashboard
